[package]
name = "ypsos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "publisher"
path = "src/publisher.rs"

[[bin]]
name = "consumer"
path = "src/consumer.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
clap = { version = "4.3.4", features = ["derive"] }
futures = "0.3.28"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["net", "io-std", "full"] }
tokio-serde = { version = "0.8.0", features = ["json"] }
tokio-serde-json = "0.3.0"
tokio-util = { version = "0.7.8", features = ["codec"] }
toml = "0.7.4"
